crates/compiler/tests/parse_errors/alias_name.txt
-- EXPECTING TYPE ALIAS NAME -------------------------------------- src/Main.elm

I am partway through parsing a type alias, but I got stuck here:

2| type alias = Int
              ^
I was expecting a name like Person or Point next. Just make sure it is a name
that starts with a capital letter!

Note: Here is an example of a valid `type alias` for reference:

    type alias Person =
      { name : String
      , age : Int
      , height : Float
      }

This would let us use `Person` as a shorthand for that record type. Using this
shorthand makes type annotations much easier to read, and makes changing code
easier if you decide later that there is more to a person than age and height!

